# frontier

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: cancel.yml  rust.yml  ssvm.yml
client/rpc/: Cargo.toml
client/rpc/src/: eth.rs  lib.rs
docs/.vuepress/: config.js
docs/licensing-revenue-model/: README.md
docs/validator-set/: validator-set.md
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs  tests.rs
frame/validator-set/: Cargo.toml
frame/validator-set/src/: lib.rs
frame/vm/: CHANGELOG.md  Cargo.toml  README.md
frame/vm/precompile/blake2/: Cargo.toml
frame/vm/precompile/blake2/src/: lib.rs
frame/vm/precompile/bn128/: Cargo.toml
frame/vm/precompile/bn128/src/: lib.rs
frame/vm/precompile/curve25519/: Cargo.toml
frame/vm/precompile/curve25519/src/: lib.rs
frame/vm/precompile/dispatch/: Cargo.toml
frame/vm/precompile/dispatch/src/: lib.rs
frame/vm/precompile/ed25519/: Cargo.toml
frame/vm/precompile/ed25519/src/: lib.rs
frame/vm/precompile/modexp/: Cargo.toml
frame/vm/precompile/modexp/src/: lib.rs
frame/vm/precompile/sha3fips/: Cargo.toml
frame/vm/precompile/sha3fips/src/: lib.rs
frame/vm/precompile/simple/: Cargo.toml
frame/vm/precompile/simple/src/: lib.rs
frame/vm/src/: lib.rs  tests.rs
frame/vm/src/runner/: mod.rs  stack.rs
frame/vm/test-vector-support/: Cargo.toml
frame/vm/test-vector-support/src/: lib.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/vm/: CHANGELOG.md  Cargo.toml
primitives/vm/src/: lib.rs
scripts/: release.sh
scripts/fund-validators/: fund.js  package-lock.json  package.json
specs/: 2021-04-22-spec-raw.json  2021-04-22-spec.json  2021-07-15-spec-raw.json  2021-07-15-spec.json
template/node/: Cargo.toml
template/node/src/: chain_spec.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
template/utils/: evm-account.js  evm-address.js  index.js  package-lock.json  package.json
ts-tests/contracts/: ECRecoverTests.sol  ERC20.sol  ExplicitRevertReason.sol  Storage.sol  Test.sol
ts-tests/frontier-test-specs/: simple-specs.json
ts-tests/tests/: test-balance.ts  test-contract.ts  test-erc20.ts  test-gas.ts  test-netapi.ts  test-pending-pool.ts  test-revert-receipt.ts  test-rpc-constants.ts  test-web3api.ts  util.ts
web3/: erc20.js  run.sh  utils.js
