[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/vm",
	"frame/vm/precompile/simple",
	"frame/vm/precompile/modexp",
	"frame/vm/precompile/ed25519",
	"frame/vm/precompile/bn128",
	"frame/vm/precompile/blake2",
	"frame/vm/precompile/dispatch",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"primitives/consensus",
	"primitives/vm",
	"primitives/rpc",
	"template/node",
	"template/runtime",
	"template/test-utils/client",
]