[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/validator-set",
	"frame/vm",
	"frame/vm/precompile/sha3fips",
	"frame/vm/precompile/simple",
	"frame/vm/precompile/modexp",
	"frame/vm/precompile/ed25519",
	"frame/vm/precompile/bn128",
	"frame/vm/precompile/blake2",
	"frame/vm/precompile/dispatch",
	"frame/vm/precompile/curve25519",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/vm",
	"primitives/rpc",
	"template/node",
	"template/runtime",
	"template/test-utils/client",
]
