[package]
name = "substrate-validator-set"
version = "0.2.0"
authors = ["gautamdhameja"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'serde',
    'frame-system/std',
    'pallet-session/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-std = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-session = { default-features = false, version = '2.0.0-dev', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
serde = { features = ['derive'], optional = true, version = '1.0.101'}
