[package]
name = "substrate-validator-set"
version = "3.0.0"
authors = ["Gautam Dhameja <quasijatt@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/gautamdhameja/substrate-validator-set"

[dependencies]
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { version = "3.0.0", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-session = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
serde = { features = ['derive'], optional = true, version = '1.0.101'}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'serde',
    'frame-system/std',
    'pallet-session/std'
]